Fix typo in team member's name

--- a/data_catalog.yaml
+++ b/data_catalog.yaml
@@ -8,7 +8,7 @@ owner:
         Giovana Vincentim
         Fernando Paiva
         Matheus Cury
-        Allana Abreg
+        Allana Abrego
         Patrick Serafim
 
 source:
